ibone_gonzalez/session-02/exercise-01/drupal-deployment.yaml
# Drupal deployment

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: drupal
  namespace: exercise01
  labels:
    app: drupal
    type: frontend
spec:
  # with one replica it is enough
  replicas: 1
  # Pod definition
  template:
    metadata:
      # Some basic metadata to be later used with services
      labels:
        app: drupal
        type: frontend
    spec:
      containers:
        # Image information
        - image: bitnami/drupal:8
          name: drupal
          # Environment variable for configuration
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          # Mount the volume in the container
          volumeMounts:
            - name: drupal-local-storage
              mountPath: /bitnami
      # Volumen
      volumes:
        - name: drupal-local-storage
          persistentVolumeClaim:
            claimName: drupal-pvc
