ibone_gonzalez/session-02/exercise-01/mariadb-deployment.yaml
# Mariadb deployment

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: exercise01
  labels:
    app: wordpress
    type: database
spec:
  # With one replica it is enough
  replicas: 1
  # Pod definition
  template:
    metadata:
      # Some basic metadata to be later used with services
      labels:
        app: wordpress
        type: database
    spec:
      containers:
        # Image information
        - name: mariadb
          image: bitnami/mariadb:10.1.24-r2
          # Port information for later use with services
          ports:
            - containerPort: 3306
              name: db-port
            # Environment variables for configuration
          volumeMounts:
            - name: mariadb-vol
              mountPath: /bitnami
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
