ibone_gonzalez/session-02/exercise-01/drupal-ingress.yaml
# Ingress rule

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-ingress
  namespace: exercise01
  # We use labels here to classify the ingress rule as well
  labels:
    app: drupal
    type: frontend
  # non-www to www redirection
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter /  /drupal/';
      sub_filter_once off;
spec:
  rules:
    - host: drupal.myblog.com
      http:
        paths:
          - path: /
            backend:
              # Name specified in drupal-service.yaml
              serviceName: drupal-service
              # The service had two ports, so we need to specify which
              servicePort: http-port
  tls:
    - hosts:
        - drupal.myblog.com
      secretName: auth-tls-secret
