ibone_gonzalez/session-02/exercise-01/wordpress-ingress.yaml
# Ingress rule

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise01
  # We use labels here to classify the ingress rule as well
  labels:
    app: wordpress
    type: frontend
  # non-www to www redirection
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: myblog.com
      http:
        paths:
          - path: /
            backend:
              # Name specified in wordpress-service.yaml
              serviceName: wordpress-service
              # The service had two ports, so we need to specify which
              servicePort: http-port
  tls:
    - hosts:
        - myblog.com
      secretName: auth-tls-secret
